the alignment issue of about page

--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -83,7 +83,9 @@ body {
 
 .about-content {
   text-align: left;
-  padding-right: 20px; /* Space between text and image */
+  padding-right: 40px; /* Space between text and image */
+  margin-left: 20px;
+  margin-right: 40px;
 }
 
 .about-content h1 {
@@ -106,6 +108,7 @@ body {
   font-size: var(--fs-6);
   line-height: 1.8;
   margin-bottom: 20px;
+  
 }
 
 .about-content .btn {
@@ -115,15 +118,16 @@ body {
 }
 
 .about-banner {
-  border-radius: var(--radius-18);
+  border-radius: var(--radius-14);
   overflow: hidden;
   max-height: 400px;
+  margin-left: 104px;
 }
 
 .about-banner img {
-  width: 100%;
+  width: 120%;
   height: 100%;
-  object-fit: cover;
+
 }
 
 /*-----------------------------------*\
